--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Angel Contreras — Netflix-style</title>
   <meta name="color-scheme" content="dark">
+
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
   <style>
@@ -13,7 +14,7 @@
       --accent:#E50914;
     }
     *{box-sizing:border-box}
-    html,body{height:100%; margin:0; background:var(--bg); color:var(--ink); overflow-x:hidden;
+    html,body{height:100%;margin:0;background:var(--bg);color:var(--ink);overflow-x:hidden;
       font-family:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif;}
     .nf{font-family:"Netflix Sans","Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
         text-transform:uppercase;}
@@ -23,10 +24,12 @@
       background:#000;z-index:10000;animation:hideIntro .5s ease 2.6s forwards;}
     .netflix-logo{display:grid;place-items:center;animation:logoZoom 1.8s ease both;}
     .logo-arch{width:min(92vw,1200px);height:auto;transform-origin:center;}
-    .ac-text{font-family:"Netflix Sans","Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
+    .ac-text{
+      font-family:"Netflix Sans","Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
       font-weight:900;letter-spacing:.035em;font-size:clamp(72px,10.5vw,200px);
       text-transform:uppercase;fill:#E50914;stroke:#000;stroke-width:8px;
-      paint-order:stroke fill;filter:drop-shadow(0 0 14px rgba(229,9,20,.35));}
+      paint-order:stroke fill;filter:drop-shadow(0 0 14px rgba(229,9,20,.35));
+    }
     @keyframes logoZoom{0%{transform:scale(.6);opacity:0}55%{transform:scale(1.12);opacity:1}100%{transform:scale(1)}}
     @keyframes hideIntro{to{opacity:0;visibility:hidden}}
 
@@ -84,19 +87,8 @@
     .btn-ghost{background:rgba(109,109,110,.7);color:#fff;}
     .btn-ghost:hover{filter:brightness(1.1);}
 
-    /* Sections */
     .section{padding:28px clamp(16px,4vw,48px) 8px;}
     .section-title{font-size:20px;font-weight:700;color:#e5e5e5;margin:0 0 10px;}
-    .card{position:relative;min-width:290px;height:168px;border-radius:8px;overflow:hidden;
-      background:#222;flex-shrink:0;transform-origin:center;transition:transform .2s ease;}
-    .card:hover{transform:scale(1.06);z-index:5;}
-    .thumb{width:100%;height:100%;object-fit:cover;}
-    .overlay{position:absolute;inset:auto 0 0 0;padding:16px;
-      background:linear-gradient(to top,rgba(0,0,0,.9),transparent);
-      opacity:0;transition:opacity .18s ease;}
-    .card:hover .overlay{opacity:1;}
-    .title{font-size:15px;font-weight:800;margin:0 0 6px;}
-    .meta{font-size:12px;color:#d2d2d2;}
   </style>
 </head>
 <body>
@@ -105,6 +97,7 @@
     <div class="netflix-logo" aria-label="ANGEL CONTRERAS">
       <svg class="logo-arch" viewBox="0 0 1200 500" role="img" aria-label="ANGEL CONTRERAS">
         <defs>
+          <!-- Slight arch -->
           <path id="ac-arc" d="M120,360 A900,900 0 0 1 1080,360" vector-effect="non-scaling-stroke"/>
         </defs>
         <text>
@@ -124,9 +117,7 @@
         <button class="tile" data-profile="recruiter" data-target="#portfolio">
           <div class="avatar av-recruiter"><span class="icon">
             <svg viewBox="0 0 24 24"><path d="M10 6V5a2 2 0 0 1 2-2h0a2 2 0 0 1 2 2v1h3a3 3 0 0 1 3 3v3h-7v1a1 1 0 0 1-2 0V12H2V9a3 3 0 0 1 3-3h5Z"/></svg>
-          </span></div>
-          <span class="label">Recruiter</span>
-        </button>
+          </span></div><span class="label">Recruiter</span></button>
         <button class="tile disabled"><div class="avatar av-family"><span class="icon">
           <svg viewBox="0 0 24 24"><path d="M16 11a4 4 0 1 0-4-4 4 4 0 0 0 4 4Zm-8 2a4 4 0 1 0-4-4 4 4 0 0 0 4 4Z"/></svg>
         </span></div><span class="label">Friends / Family</span></button>
@@ -137,7 +128,7 @@
     </div>
   </div>
 
-  <!-- App -->
+  <!-- Main -->
   <div class="main" id="appRoot">
     <nav class="navbar" id="navbar">
       <button class="brand nf" id="brandHome">Angel Contreras</button>
@@ -166,13 +157,7 @@
     </header>
 
     <!-- Portfolio -->
-    <section class="section" id="portfolio">
-      <h2 class="section-title">Portfolio</h2>
-      <div class="card">
-        <img class="thumb" src="https://images.unsplash.com/photo-1556157382-97eda2d62296?w=1000&auto=format&fit=crop" alt="">
-        <div class="overlay"><h3 class="title">Sample Project</h3><p class="meta">A project highlight goes here.</p></div>
-      </div>
-    </section>
+    <section class="section" id="portfolio"><h2 class="section-title">Portfolio</h2></section>
 
     <!-- Skills -->
     <section class="section" id="skills"><h2 class="section-title">Technical Skills</h2></section>
@@ -200,7 +185,7 @@
   </div>
 
   <script>
-    // simplified nav -> who’s watching
+    // Home in nav returns to "Who's Watching"
     document.getElementById('navHome').onclick = e => {
       e.preventDefault();
       document.getElementById('appRoot').classList.remove('show');
