--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       padding:0 clamp(16px,4vw,48px); isolation:isolate;
       background:
         linear-gradient(90deg,rgba(0,0,0,.8),rgba(0,0,0,.3)),
-        url('https://images.unsplash.com/photo-1536440136628-849c177e76a1?w=1920&auto=format&fit=crop') center/cover no-repeat;
+        url('https://images.unsplash.com/photo-1518770660439-4636190af475?w=1920&auto=format&fit=crop') center/cover no-repeat;
     }
     .hero::after{
       content:""; position:absolute; left:0; right:0; bottom:-1px; height:160px;
@@ -238,8 +238,8 @@
     <div class="netflix-logo" aria-label="ANGEL CONTRERAS">
       <svg class="logo-arch" viewBox="0 0 1200 500" role="img" aria-label="ANGEL CONTRERAS">
         <defs>
-          <!-- Subtle arch: large radius for a gentle curve -->
-          <path id="ac-arc" d="M120,360 A900,900 0 0 1 1080,360" vector-effect="non-scaling-stroke"/>
+          <!-- Wider curve with more spacing to show all letters -->
+          <path id="ac-arc" d="M80,380 A1000,1000 0 0 1 1120,380" vector-effect="non-scaling-stroke"/>
         </defs>
         <text>
           <textPath href="#ac-arc" startOffset="50%" text-anchor="middle" dominant-baseline="central" class="ac-text">
@@ -315,8 +315,8 @@
         <p class="sub">Full Stack Developer &amp; IT Professional</p>
         <p class="desc">Passionate about building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
         <div class="cta">
-          <a class="btn btn-white" href="#portfolio"><span aria-hidden="true">▶</span> View Resume</a>
-          <a class="btn btn-ghost" href="#portfolio"><span aria-hidden="true">ℹ</span> More Info</a>
+          <a class="btn btn-white" href="#portfolio"><span aria-hidden="true">▶</span> Resume</a>
+          <a class="btn btn-ghost" href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener"><span aria-hidden="true">ℹ</span> LinkedIn</a>
         </div>
       </div>
     </header>
