--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <!-- Hero -->
     <header class="hero" id="home">
       <div class="hero-content">
-        <h1 class="nf">ANGEL CONTRERAS</h1>
+        <h1 class="nf">ANGEL CONTRERAS - CSULA STUDENT</h1>
         <p class="sub">Full Stack Developer &amp; IT Professional</p>
         <p class="desc">Passionate about building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
         <div class="cta">
