--- a/index.html
+++ b/index.html
@@ -210,7 +210,54 @@
     }
     .card:hover .overlay{opacity:1}
     .title{font-size:15px; font-weight:800; margin:0 0 6px}
-    .meta{font-size:12px; color:#d2d2d2}
+    /* Hire Me Contact Section */
+    .contact-container{
+      max-width:800px; margin:0 auto; padding:24px 0;
+    }
+    .contact-grid{
+      display:grid; gap:24px; margin-top:32px;
+      grid-template-columns:repeat(auto-fit, minmax(280px, 1fr));
+    }
+    .contact-card{
+      background:rgba(255,255,255,.05);
+      border:1px solid rgba(255,255,255,.1);
+      border-radius:12px;
+      padding:32px 24px;
+      text-align:center;
+      transition:all .3s ease;
+      text-decoration:none;
+      color:inherit;
+      display:block;
+    }
+    .contact-card:hover{
+      background:rgba(255,255,255,.08);
+      border-color:rgba(255,255,255,.2);
+      transform:translateY(-4px);
+    }
+    .contact-icon{
+      width:48px; height:48px;
+      margin:0 auto 16px;
+      background:var(--accent);
+      border-radius:50%;
+      display:grid;
+      place-items:center;
+    }
+    .contact-icon svg{
+      width:24px; height:24px;
+      fill:#fff;
+    }
+    .contact-card h3{
+      font-size:18px;
+      font-weight:700;
+      margin:0 0 8px;
+      color:#fff;
+    }
+    .contact-card p{
+      font-size:14px;
+      color:#b3b3b3;
+      margin:0;
+      word-break:break-word;
+    }
     
     /* Footer */
     .footer{
@@ -473,11 +520,53 @@
     <!-- Hire Me -->
     <section class="section" id="hire">
       <h2 class="section-title">Hire Me</h2>
-      <p style="color:#bdbdbd; max-width:60ch">
-        I'm open to full-time roles and select freelance projects. Email
-        <a href="mailto:angel@example.com" style="color:#e5e5e5">angel@example.com</a>
-        or DM on <a href="https://linkedin.com" target="_blank" rel="noopener" style="color:#e5e5e5">LinkedIn</a>.
-      </p>
+      <div class="contact-container">
+        <p style="color:#bdbdbd; max-width:60ch; margin:0 auto 8px; text-align:center">
+          I'm open to full-time roles and select freelance projects. Feel free to reach out!
+        </p>
+        
+        <div class="contact-grid">
+          <a href="mailto:angel@example.com" class="contact-card">
+            <div class="contact-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+              </svg>
+            </div>
+            <h3>Email</h3>
+            <p>angel@example.com</p>
+          </a>
+
+          <a href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener" class="contact-card">
+            <div class="contact-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
+              </svg>
+            </div>
+            <h3>LinkedIn</h3>
+            <p>Angel Contreras</p>
+          </a>
+
+          <a href="https://github.com" target="_blank" rel="noopener" class="contact-card">
+            <div class="contact-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z"/>
+              </svg>
+            </div>
+            <h3>GitHub</h3>
+            <p>View Projects</p>
+          </a>
+
+          <a href="tel:+1234567890" class="contact-card">
+            <div class="contact-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+              </svg>
+            </div>
+            <h3>Phone</h3>
+            <p>+1 (234) 567-890</p>
+          </a>
+        </div>
+      </div>
     </section>
 
     <!-- Footer -->
