--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <!-- Hero -->
     <header class="hero" id="home">
       <div class="hero-content">
-        <h1 class="nf">ANGEL CONTRERAS - CSULA STUDENT</h1>
+        <h1 class="nf" style="white-space:nowrap">ANGEL CONTRERAS - CSULA STUDENT</h1>
         <p class="sub">Full Stack Developer &amp; IT Professional</p>
         <p class="desc">Passionate about building innovative solutions and creating seamless digital experiences. Breaking into tech, one project at a time.</p>
         <div class="cta">
@@ -526,14 +526,14 @@
         </p>
         
         <div class="contact-grid">
-          <a href="mailto:angel@example.com" class="contact-card">
+          <a href="mailto:acontr126@calstatela.edu" class="contact-card">
             <div class="contact-icon">
               <svg viewBox="0 0 24 24">
                 <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
               </svg>
             </div>
             <h3>Email</h3>
-            <p>angel@example.com</p>
+            <p>acontr126@calstatela.edu</p>
           </a>
 
           <a href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener" class="contact-card">
@@ -556,14 +556,14 @@
             <p>View Projects</p>
           </a>
 
-          <a href="tel:+1234567890" class="contact-card">
+          <a href="tel:+12132921901" class="contact-card">
             <div class="contact-icon">
               <svg viewBox="0 0 24 24">
                 <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
               </svg>
             </div>
             <h3>Phone</h3>
-            <p>+1 (234) 567-890</p>
+            <p>(213) 292-1901</p>
           </a>
         </div>
       </div>
