--- a/index.html
+++ b/index.html
@@ -280,19 +280,19 @@
   </style>
 </head>
 <body>
-  <!-- Intro (slight-arch SVG) -->
+  <!-- Intro (Netflix style) -->
   <div class="netflix-intro" aria-hidden="true">
     <div class="netflix-logo" aria-label="ANGEL CONTRERAS">
-      <svg class="logo-arch" viewBox="0 0 1200 500" role="img" aria-label="ANGEL CONTRERAS">
+      <svg class="logo-n" viewBox="0 0 200 200" role="img" aria-label="N Logo">
         <defs>
-          <!-- Wider curve with more spacing to show all letters -->
-          <path id="ac-arc" d="M80,380 A1000,1000 0 0 1 1120,380" vector-effect="non-scaling-stroke"/>
+          <linearGradient id="redGrad" x1="0%" y1="0%" x2="100%" y2="100%">
+            <stop offset="0%" style="stop-color:#E50914;stop-opacity:1" />
+            <stop offset="100%" style="stop-color:#B20710;stop-opacity:1" />
+          </linearGradient>
         </defs>
-        <text>
-          <textPath href="#ac-arc" startOffset="50%" text-anchor="middle" dominant-baseline="central" class="ac-text">
-            ANGEL CONTRERAS
-          </textPath>
-        </text>
+        <rect x="20" y="20" width="50" height="160" fill="url(#redGrad)" />
+        <polygon points="70,20 120,180 120,20" fill="url(#redGrad)" />
+        <rect x="130" y="20" width="50" height="160" fill="url(#redGrad)" />
       </svg>
     </div>
   </div>
