--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       --ring:rgba(255,255,255,.14);
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
+    html,body{height:100%; overflow-x:hidden}
+    html{scroll-behavior:smooth}
     body{
       margin:0; font-family:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif;
-      background:var(--bg); color:var(--ink); overflow-x:hidden;
+      background:var(--bg); color:var(--ink);
     }
 
     .nf{
@@ -716,8 +717,16 @@
 
     // Boot
     window.addEventListener('DOMContentLoaded', () => {
+      // Scroll to top immediately on page load
+      window.scrollTo({ top: 0, behavior: 'auto' });
+      
       kickIntro();
       scheduleAfterIntro();
+    });
+    
+    // Also ensure we're at top when page becomes visible
+    window.addEventListener('pageshow', () => {
+      window.scrollTo({ top: 0, behavior: 'auto' });
     });
   </script>
 </body>
