--- a/index.html
+++ b/index.html
@@ -281,20 +281,10 @@
   </style>
 </head>
 <body>
-  <!-- Intro (Netflix style) -->
+  <!-- Intro (Netflix style with name) -->
   <div class="netflix-intro" aria-hidden="true">
     <div class="netflix-logo" aria-label="ANGEL CONTRERAS">
-      <svg class="logo-n" viewBox="0 0 200 200" role="img" aria-label="N Logo">
-        <defs>
-          <linearGradient id="redGrad" x1="0%" y1="0%" x2="100%" y2="100%">
-            <stop offset="0%" style="stop-color:#E50914;stop-opacity:1" />
-            <stop offset="100%" style="stop-color:#B20710;stop-opacity:1" />
-          </linearGradient>
-        </defs>
-        <rect x="20" y="20" width="50" height="160" fill="url(#redGrad)" />
-        <polygon points="70,20 120,180 120,20" fill="url(#redGrad)" />
-        <rect x="130" y="20" width="50" height="160" fill="url(#redGrad)" />
-      </svg>
+      <h1 class="intro-text">ANGEL CONTRERAS</h1>
     </div>
   </div>
 
