--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
     <!-- Portfolio (renamed from Professional) -->
     <section class="section" id="portfolio">
-      <h2 class="section-title">Portfolio</h2>
+      <h2 class="section-title">Today's Top Picks for Recruiter</h2>
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll left">‹</button>
         <div class="scroller" tabindex="0" aria-label="Portfolio carousel">
@@ -416,7 +416,7 @@
 
     <!-- Skills -->
     <section class="section" id="skills">
-      <h2 class="section-title">Technical Skills</h2>
+      <h2 class="section-title">Continue Watching for Recruiter</h2>
       <div class="rail">
         <button class="scroll-btn scroll-left" aria-label="Scroll skills left">‹</button>
         <div class="scroller" tabindex="0" aria-label="Skills carousel">
@@ -462,49 +462,6 @@
           </article>
         </div>
         <button class="scroll-btn scroll-right" aria-label="Scroll skills right">›</button>
-      </div>
-    </section>
-
-    <!-- Projects (renamed from Experience) -->
-    <section class="section" id="projects">
-      <h2 class="section-title">Projects</h2>
-      <div class="rail">
-        <button class="scroll-btn scroll-left" aria-label="Scroll projects left">‹</button>
-        <div class="scroller" tabindex="0" aria-label="Projects carousel">
-          <article class="card">
-            <img class="thumb" alt="IT Project Management" loading="lazy"
-                 src="https://images.unsplash.com/photo-1557800636-894a64c1696f?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">IT Project Management</h3>
-              <p class="meta">Managing tech projects efficiently</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="Web Development" loading="lazy"
-                 src="https://images.unsplash.com/photo-1487014679447-9f8336841d58?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Web Development</h3>
-              <p class="meta">Building responsive web solutions</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="System Administration" loading="lazy"
-                 src="https://images.unsplash.com/photo-1518770660439-4636190af475?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">System Administration</h3>
-              <p class="meta">Maintaining IT infrastructure</p>
-            </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="Technical Support" loading="lazy"
-                 src="https://images.unsplash.com/photo-1525182008055-f88b95ff7980?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">Technical Support</h3>
-              <p class="meta">Providing IT solutions</p>
-            </div>
-          </article>
-        </div>
-        <button class="scroll-btn scroll-right" aria-label="Scroll projects right">›</button>
       </div>
     </section>
 
