--- a/index.html
+++ b/index.html
@@ -421,45 +421,37 @@
         <button class="scroll-btn scroll-left" aria-label="Scroll skills left">‹</button>
         <div class="scroller" tabindex="0" aria-label="Skills carousel">
           <article class="card">
-            <img class="thumb" alt="HTML & CSS" loading="lazy"
-                 src="https://images.unsplash.com/photo-1520975916090-3105956dac38?w=1000&auto=format&fit=crop">
+            <img class="thumb" alt="Movies" loading="lazy"
+                 src="https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title">HTML &amp; CSS</h3>
-              <p class="meta">Advanced frontend development</p>
+              <h3 class="title">Movies</h3>
+              <p class="meta">Film enthusiast & cinephile</p>
             </div>
           </article>
           <article class="card">
-            <img class="thumb" alt="JavaScript" loading="lazy"
-                 src="https://images.unsplash.com/photo-1518770660439-4636190af475?w=1000&auto=format&fit=crop">
+            <img class="thumb" alt="Shows" loading="lazy"
+                 src="https://images.unsplash.com/photo-1522869635100-9f4c5e86aa37?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title">JavaScript</h3>
-              <p class="meta">Interactive web applications</p>
+              <h3 class="title">Shows</h3>
+              <p class="meta">Binge-watcher & series lover</p>
             </div>
           </article>
           <article class="card">
-            <img class="thumb" alt="React" loading="lazy"
-                 src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?w=1000&auto=format&fit=crop">
+            <img class="thumb" alt="Video Games" loading="lazy"
+                 src="https://images.unsplash.com/photo-1511512578047-dfb367046420?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title">React</h3>
-              <p class="meta">Modern UI development</p>
+              <h3 class="title">Video Games</h3>
+              <p class="meta">Gamer & interactive storytelling</p>
             </div>
           </article>
-          <article class="card">
-            <img class="thumb" alt="Python" loading="lazy"
-                 src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?w=1000&auto=format&fit=crop">
+          <a href="contact.html" class="card" style="text-decoration:none; cursor:pointer">
+            <img class="thumb" alt="Contact Me" loading="lazy"
+                 src="https://images.unsplash.com/photo-1596524430615-b46475ddff6e?w=1000&auto=format&fit=crop">
             <div class="overlay">
-              <h3 class="title">Python</h3>
-              <p class="meta">Back-end & automation</p>
+              <h3 class="title">Contact Me</h3>
+              <p class="meta">Let's connect & collaborate</p>
             </div>
-          </article>
-          <article class="card">
-            <img class="thumb" alt="SQL" loading="lazy"
-                 src="https://images.unsplash.com/photo-1556157382-97eda2d62296?w=1000&auto=format&fit=crop">
-            <div class="overlay">
-              <h3 class="title">SQL</h3>
-              <p class="meta">Database management</p>
-            </div>
-          </article>
+          </a>
         </div>
         <button class="scroll-btn scroll-right" aria-label="Scroll skills right">›</button>
       </div>
