--- a/contact.html
+++ b/contact.html
@@ -1,332 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hire Me - Angel Contreras</title>
-  <meta name="color-scheme" content="dark">
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Hire Me – Angel Contreras</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#141414; --ink:#fff; --muted:#e5e5e5; --ink-2:#b3b3b3;
-      --accent:#E50914; --ring:rgba(255,255,255,.14);
+      --bg:#0f0f10; --panel:#1c1d20; --muted:#9aa1a9; --ink:#eaecef;
+      --brand:#e11d2e; --ring:rgba(255,255,255,.08);
+      --pill:#222429; --pill-border:#2c2f36;
+      --ln:#0a66c2; --ln-dark:#0a57a6;
     }
     *{box-sizing:border-box}
-    html,body{height:100%; margin:0}
-    body{
-      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif;
-      background:var(--bg); color:var(--ink); overflow-x:hidden;
-    }
+    html,body{height:100%;margin:0}
+    body{font-family:Inter,system-ui,Segoe UI,Helvetica,Arial,sans-serif;background:linear-gradient(180deg,#0c0c0e, #121316 40%, #0f1012);color:var(--ink)}
+    a{color:inherit;text-decoration:none}
 
-    .nf{
-      font-family:"Netflix Sans","Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
-      letter-spacing:.015em;
-      text-transform:uppercase;
+    /* Top bar */
+    .nav{
+      position:sticky; top:0; z-index:20;
+      backdrop-filter:saturate(1.2) blur(8px);
+      background:rgba(10,10,12,.7);
+      border-bottom:1px solid rgba(255,255,255,.06);
     }
-
-    /* Navbar */
-    .navbar{
-      position:fixed; inset:0 auto auto 0; width:100%;
-      padding:14px clamp(16px,4vw,48px);
-      display:flex; align-items:center; gap:32px;
-      z-index:1000;
-      background:#0f0f0f;
-      box-shadow:0 2px 0 rgba(255,255,255,.04) inset;
+    .nav-inner{
+      max-width:1100px; margin:0 auto; padding:16px 20px; display:flex; align-items:center; gap:22px;
     }
     .brand{
-      background:none; border:0; padding:0; margin:0;
-      font-weight:900; color:var(--accent); letter-spacing:-.04em; 
-      font-size:clamp(22px,3.2vw,32px);
-      text-decoration:none;
-      flex-shrink:0;
+      font-weight:900; letter-spacing:.04em; color:var(--brand);
+      text-transform:uppercase; font-size:22px;
     }
-    .navlinks{display:flex; gap:22px; align-items:center; flex-wrap:wrap; flex:1;}
-    .navlinks a{
-      color:#e5e5e5; text-decoration:none; font-size:14px; font-weight:600;
-      transition:color .2s;
-    }
-    .navlinks a:hover{color:var(--ink-2)}
-    
-    /* Profile Avatar in Navbar */
-    .profile-avatar{
-      margin-left:auto;
-      width:40px; height:40px;
-      border-radius:6px;
-      background:linear-gradient(180deg,#0DB5FF,#0070F3);
-      display:grid;
-      place-items:center;
-      cursor:pointer;
-      transition:transform .2s ease;
-      flex-shrink:0;
-    }
-    .profile-avatar:hover{
-      transform:scale(1.05);
-    }
-    .profile-avatar svg{
-      width:20px; height:20px;
-      fill:#fff;
-    }
+    .tabs{margin-left:auto; display:flex; gap:20px; align-items:center; flex-wrap:wrap}
+    .tabs a{color:#c9cbd1; font-weight:600; font-size:14px; opacity:.9}
+    .tabs a:hover{opacity:1}
+    .tabs a.active{color:#fff}
 
-    /* Contact Container */
-    .contact-container{
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:100px clamp(16px,4vw,48px) 60px;
-    }
+    /* Page wrap */
+    .wrap{max-width:900px; margin:0 auto; padding:56px 18px 96px}
 
-    /* Profile Card */
-    .profile-card{
-      background:rgba(30,30,30,.95);
-      border:1px solid rgba(255,255,255,.12);
-      border-radius:16px;
-      padding:48px 40px;
-      max-width:680px;
-      width:100%;
-      text-align:center;
+    /* Card */
+    .card{
+      background:var(--panel); border:1px solid rgba(255,255,255,.06);
+      border-radius:14px; padding:26px; display:grid; grid-template-columns:80px 1fr; gap:18px;
+      box-shadow:0 10px 30px rgba(0,0,0,.35);
     }
+    .avatar{
+      width:80px;height:80px;border-radius:12px; overflow:hidden; display:grid;place-items:center;
+      background:linear-gradient(135deg,#2e7eed,#0a66c2);
+      color:#fff; font-weight:900; font-size:28px;
+    }
+    .c-title{font-size:18px; font-weight:900; margin:0 0 2px}
+    .c-sub{margin:0 0 10px; color:var(--muted); font-weight:600}
+    .c-desc{margin:0 0 12px; color:#c7ccd3; line-height:1.6}
+    .edu{color:#8b929b; font-size:13px}
 
-    .profile-header{
-      display:flex;
-      align-items:flex-start;
-      gap:24px;
-      margin-bottom:32px;
-      text-align:left;
+    .ln-btn{
+      display:inline-flex; align-items:center; gap:10px; margin-top:12px;
+      background:var(--ln); border:1px solid rgba(255,255,255,.12);
+      color:#fff; padding:10px 14px; border-radius:8px; font-weight:800; font-size:14px;
+      box-shadow:0 10px 24px rgba(10,102,194,.35); transition:.2s transform, .2s background;
     }
+    .ln-btn:hover{background:var(--ln-dark); transform:translateY(-1px)}
+    .ln-btn svg{width:18px;height:18px;fill:#fff}
 
-    .profile-image{
-      width:100px;
-      height:100px;
-      border-radius:50%;
-      background:linear-gradient(135deg, var(--accent), #b20710);
-      flex-shrink:0;
-      display:grid;
-      place-items:center;
-      font-size:40px;
-      font-weight:900;
-      color:#fff;
-      letter-spacing:-.02em;
-    }
+    /* Middle text */
+    .lead{ text-align:center; margin:26px auto 18px; color:#c9cdd4 }
 
-    .profile-info{
-      flex:1;
+    /* Pills */
+    .pills{max-width:520px; margin:10px auto 30px; display:flex; flex-direction:column; gap:14px}
+    .pill{
+      display:flex; align-items:center; gap:12px; justify-content:center;
+      padding:14px 18px; background:var(--pill); border:1px solid var(--pill-border);
+      color:#e9ecf1; border-radius:999px; font-weight:700; letter-spacing:.2px;
+      transition:.2s transform, .2s border-color, .2s background;
     }
+    .pill:hover{transform:translateX(3px); border-color:#3a3f48; background:#24272d}
+    .pill .icon{width:18px;height:18px; display:inline-block}
+    .pill.mail .icon{filter:none}
+    .pill.phone .icon{filter:none}
 
-    .profile-info h1{
-      font-size:32px;
-      font-weight:900;
-      color:#fff;
-      margin:0 0 8px;
-      letter-spacing:-.02em;
-    }
+    /* Coffee row */
+    .coffee{display:flex; justify-content:center; align-items:center; gap:10px; color:#cfd3da; margin-top:18px; font-weight:600}
 
-    .profile-info .title{
-      font-size:17px;
-      color:#999;
-      margin:0 0 16px;
-      font-weight:400;
-    }
-
-    .profile-info .bio{
-      font-size:15px;
-      color:#b3b3b3;
-      line-height:1.6;
-      margin:0 0 12px;
-    }
-
-    .profile-info .education{
-      font-size:14px;
-      color:#888;
-      margin:0;
-    }
-
-    .linkedin-btn{
-      display:inline-flex;
-      align-items:center;
-      gap:10px;
-      padding:12px 24px;
-      background:#0077b5;
-      color:#fff;
-      text-decoration:none;
-      border-radius:8px;
-      font-weight:700;
-      font-size:14px;
-      transition:all .3s ease;
-      margin-top:16px;
-    }
-
-    .linkedin-btn:hover{
-      background:#006399;
-      transform:translateY(-2px);
-      box-shadow:0 6px 20px rgba(0,119,181,.4);
-    }
-
-    .linkedin-btn svg{
-      width:18px;
-      height:18px;
-      fill:currentColor;
-    }
-
-    /* Tagline */
-    .tagline{
-      font-size:18px;
-      color:#ccc;
-      margin:0 0 32px;
-      font-weight:400;
-      line-height:1.5;
-    }
-
-    /* Contact Methods */
-    .contact-methods{
-      display:flex;
-      flex-direction:column;
-      gap:16px;
-      margin-bottom:32px;
-    }
-
-    .contact-item{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap:12px;
-      padding:16px 24px;
-      background:rgba(255,255,255,.04);
-      border:1px solid rgba(255,255,255,.1);
-      border-radius:12px;
-      color:#fff;
-      text-decoration:none;
-      font-size:16px;
-      transition:all .3s ease;
-    }
-
-    .contact-item:hover{
-      background:rgba(255,255,255,.08);
-      border-color:rgba(255,255,255,.2);
-      transform:translateX(4px);
-    }
-
-    .contact-item svg{
-      width:20px;
-      height:20px;
-      flex-shrink:0;
-    }
-
-    .contact-item.email svg{
-      fill:#EA4335;
-    }
-
-    .contact-item.phone svg{
-      fill:#34A853;
-    }
-
-    /* Coffee Section */
-    .coffee-section{
-      font-size:17px;
-      color:#aaa;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap:8px;
-      padding-top:16px;
-      border-top:1px solid rgba(255,255,255,.08);
-    }
-
-    /* Footer */
-    .footer{
-      padding:40px clamp(16px,4vw,48px) 32px;
-      text-align:center;
-    }
-    .footer .copyright{
-      color:#808080;
-      font-size:12px;
-      margin:0;
-    }
-
-    @media (max-width: 640px) {
-      .profile-header{
-        flex-direction:column;
-        align-items:center;
-        text-align:center;
-      }
-      .profile-info{
-        text-align:center;
-      }
-      .profile-info h1{
-        font-size:28px;
-      }
+    /* Responsive */
+    @media (max-width:620px){
+      .card{grid-template-columns:60px 1fr}
+      .avatar{width:60px;height:60px; font-size:22px}
     }
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <a href="index.html" class="brand nf">Angel Contreras</a>
-    <div class="navlinks" role="navigation" aria-label="Primary">
-      <a href="index.html">Home</a>
-      <a href="index.html#portfolio">Portfolio</a>
-      <a href="index.html#skills">Skills</a>
-      <a href="index.html#projects">Projects</a>
-      <a href="contact.html">Hire Me</a>
+  <!-- NAV -->
+  <header class="nav">
+    <div class="nav-inner">
+      <a class="brand" href="index.html">ANGEL CONTRERAS</a>
+      <nav class="tabs" aria-label="Primary">
+        <a href="index.html">Home</a>
+        <a href="professional.html">Professional</a>
+        <a href="skills.html">Skills</a>
+        <a href="projects.html">Projects</a>
+        <a class="active" href="contact.html">Hire Me</a>
+      </nav>
     </div>
-    <div class="profile-avatar" aria-label="Recruiter profile" title="Recruiter">
-      <svg viewBox="0 0 24 24">
-        <path d="M10 6V5a2 2 0 0 1 2-2h0a2 2 0 0 1 2 2v1h3a3 3 0 0 1 3 3v3h-7v1a1 1 0 0 1-2 0V12H2V9a3 3 0 0 1 3-3h5Zm2-1h0a1 1 0 0 0-1 1v1h2V6a1 1 0 0 0-1-1ZM2 13h9v1a1 1 0 0 0 2 0v-1h9v5a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-5Z"/>
-      </svg>
-    </div>
-  </nav>
+  </header>
 
-  <!-- Contact Container -->
-  <div class="contact-container">
-    <div class="profile-card">
-      <div class="profile-header">
-        <div class="profile-image">AC</div>
-        <div class="profile-info">
-          <h1>Angel Contreras</h1>
-          <p class="title">Computer Science Student</p>
-          <p class="bio">Passionate about building innovative solutions and creating seamless user experiences. Currently studying at Cal State LA.</p>
-          <p class="education">Cal State LA</p>
-          <a href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener" class="linkedin-btn">
-            <svg viewBox="0 0 24 24">
-              <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
-            </svg>
-            View Profile
-          </a>
-        </div>
-      </div>
+  <main class="wrap">
+    <!-- PROFILE CARD -->
+    <section class="card" aria-labelledby="name">
+      <div class="avatar" aria-hidden="true">AC</div>
+      <div>
+        <h1 id="name" class="c-title">Angel Contreras</h1>
+        <p class="c-sub">IT-focused student • Managing IT Projects</p>
+        <p class="c-desc">
+          Passionate about technology and project execution. I’m exploring roles where I can grow,
+          contribute to teams, and deliver value across the stack and the business.
+        </p>
+        <p class="edu">California State University, Los Angeles</p>
 
-      <p class="tagline">I'm always up for a chat or a coffee! Feel free to reach out.</p>
-
-      <div class="contact-methods">
-        <a href="mailto:acontr126@calstatela.edu" class="contact-item email">
-          <svg viewBox="0 0 24 24">
-            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-          </svg>
-          acontr126@calstatela.edu
-        </a>
-
-        <a href="tel:+12132921901" class="contact-item phone">
-          <svg viewBox="0 0 24 24">
-            <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
-          </svg>
-          (213) 292-1901
+        <a class="ln-btn" href="https://www.linkedin.com/in/angel-contreras-488539195/" target="_blank" rel="noopener">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M19 3H5A2 2 0 0 0 3 5v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2ZM8.34 18.34H6V9.75h2.34v8.59ZM7.17 8.6a1.35 1.35 0 1 1 0-2.7 1.35 1.35 0 0 1 0 2.7ZM18 18.34h-2.34V14c0-1.03-.37-1.73-1.31-1.73-.72 0-1.14.49-1.33.97-.07.17-.09.41-.09.65v4.45H10.6s.03-7.22 0-7.98h2.34v1.13c.31-.48.86-1.15 2.1-1.15 1.53 0 2.96 1 2.96 3.15v4.85Z"/></svg>
+          View Profile
         </a>
       </div>
+    </section>
 
-      <div class="coffee-section">
-        Or catch up over a coffee ☕ 🫖
-      </div>
+    <!-- MESSAGE -->
+    <p class="lead">I'm always up for a chat or a coffee! Feel free to reach out.</p>
+
+    <!-- CONTACT PILLS -->
+    <div class="pills">
+      <a class="pill mail" href="mailto:acontr126@calstatela.edu">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="#ea4335" d="M20 4H4a2 2 0 0 0-2 2v.4l10 6.6 10-6.6V6a2 2 0 0 0-2-2Zm0 4.8-9.28 6.13a1 1 0 0 1-1.1 0L4 8.8V18a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8.8Z"/></svg>
+        acontr126@calstatela.edu
+      </a>
+
+      <a class="pill phone" href="tel:+12132921901">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path fill="#39b46a" d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20a1 1 0 0 1-1 1C10.61 21 3 13.39 3 4a1 1 0 0 1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2Z"/></svg>
+        (213) 292-1901
+      </a>
     </div>
-  </div>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p class="copyright">© <span id="year"></span> Angel Contreras. All rights reserved.</p>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+    <!-- COFFEE -->
+    <div class="coffee">Or catch up over a coffee ☕ <span aria-hidden="true">🍵</span></div>
+  </main>
 </body>
 </html>
